Adding mastg, maswe and mobileapp api
